--- a/playground/docs/swatches.jade
+++ b/playground/docs/swatches.jade
@@ -15,15 +15,19 @@ block content
       a.atk-swatch-green.atk-button(href='#') Button
       a.atk-swatch-red.atk-button(href='#' data-border="outline") Button
       a.atk-button(href='#' data-border="outline thick") Button
-    .atk-box
+    .atk-swatch-default
       h2 Heading
       p Lorem ipsum dolor sit amet, consectetur #[a(href='#') adipisicing elit]. Dolor consequatur nam id, vero quae accusantium itaque corporis, consequuntur est quo modi beatae, porro et magnam neque tempore eveniet velit. Animi.
       .atk-comment This is comment.
       hr
-      div(data-items="spacing-xs")
+      div(data-items="spacing-xs" data-margin="bottom-l")
         a.atk-swatch-green.atk-button(href='#') Button
         a.atk-swatch-red.atk-button(href='#' data-border="outline") Button
         a.atk-button(href='#' data-border="outline thick") Button
+      ul.atk-lister.atk-list-nobullets(data-lister="spacing-xs")
+        li Testing
+        li Testing
+        li Testing
   .atk-box
     h2 Heading
     p Lorem ipsum dolor sit amet, consectetur #[a(href='#') adipisicing elit]. Dolor consequatur nam id, vero quae accusantium itaque corporis, consequuntur est quo modi beatae, porro et magnam neque tempore eveniet velit. Animi.
@@ -38,8 +42,12 @@ block content
       p Lorem ipsum dolor sit amet, consectetur #[a(href='#') adipisicing elit]. Dolor consequatur nam id, vero quae accusantium itaque corporis, consequuntur est quo modi beatae, porro et magnam neque tempore eveniet velit. Animi.
       .atk-comment This is comment.
       hr
-      div(data-items="spacing-xs")
+      div(data-items="spacing-xs" data-margin="bottom-l")
         a.atk-swatch-green.atk-button(href='#') Button
         a.atk-swatch-red.atk-button(href='#' data-border="outline") Button
         a.atk-button(href='#' data-border="outline thick") Button
+      ul.atk-lister.atk-list-nobullets(data-lister="spacing-xs")
+        li Testing
+        li Testing
+        li Testing
 
